--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "dependencies": {
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^0.9.374",
-    "bootstrap": "^5.3.1",
+    "bootstrap": "^5.3.2",
     "chart.js": "^4.3.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0"
+    "react-router-dom": "^6.14.0",
+    "react-switch": "^7.0.0",
+    "react-toastify": "^9.1.3",
+    "react-toggle-dark-mode": "^1.1.1",
+    "styled-components": "^6.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
